package com.ferllop.evermind.models;

public enum UserStatus {
    VERIFICATION_EMAIL,
    LOGGED_IN,
    LOGGED_OUT;
}
