@startuml

title __MODELS's Class Diagram__\n

  namespace com.ferllop.evermind {
    namespace models {
      class com.ferllop.evermind.models.Card {
          # answer : String
          # authorID : String
          # authorUsername : String
          # question : String
          + Card()
          + Card()
          + clone()
          + getAnswer()
          + getAuthorID()
          + getAuthorUsername()
          + getLabelling()
          + getQuestion()
      }
    }
  }
  

  namespace com.ferllop.evermind {
    namespace models {
      class com.ferllop.evermind.models.Labelling {
          ~ labels : List<String>
          - TAG : String
          + Labelling()
          + Labelling()
          + getLabels()
          {static} + isValid()
          + toString()
          - toList()
      }
    }
  }
  

  namespace com.ferllop.evermind {
    namespace models {
      enum Level {
        LEVEL_0
        LEVEL_1
        LEVEL_2
        LEVEL_3
        LEVEL_4
        LEVEL_5
        LEVEL_6
        LEVEL_7
        value
      }
    }
  }
  

  namespace com.ferllop.evermind {
    namespace models {
      abstract class com.ferllop.evermind.models.Model {
          - id : String
          + getId()
          + setId()
      }
    }
  }
  

  namespace com.ferllop.evermind {
    namespace models {
      class com.ferllop.evermind.models.Search {
          ~ USER_PREFIX : String
          ~ tokens : Token[]
          + Search()
          + getAuthorUsername()
          + getLabels()
          + hasAuthor()
          + hasLabels()
          - extractTokens()
          - getFirstAuthorUsernameToken()
          - getLabelTokens()
          - parseQuery()
      }
    }
  }
  

  namespace com.ferllop.evermind {
    namespace models {
      class com.ferllop.evermind.models.Search.Token {
          ~ value : String
          + Token()
          + isAuthorUsername()
          + isLabel()
          + toString()
      }
    }
  }
  

  namespace com.ferllop.evermind {
    namespace models {
      class com.ferllop.evermind.models.SubscribedCard {
          ~ cardID : String
          + SubscribedCard()
          + getCard()
          + getCardID()
          + getSubscription()
          + setCard()
      }
    }
  }
  

  namespace com.ferllop.evermind {
    namespace models {
      class com.ferllop.evermind.models.Subscription {
          ~ cardID : String
          ~ lastReview : Timestamp
          ~ nextReview : Timestamp
          ~ userID : String
          + Subscription()
          + Subscription()
          + getCardID()
          + getLastReview()
          + getLevel()
          + getNextReview()
          + getUserID()
          + isToReviewToday()
          - reclockDate()
      }
    }
  }
  

  namespace com.ferllop.evermind {
    namespace models {
      class com.ferllop.evermind.models.User {
          ~ authID : String
          ~ dayStartTime : int
          ~ email : String
          ~ lastConnection : Timestamp
          ~ lastLogin : Timestamp
          ~ name : String
          ~ signIn : Timestamp
          ~ username : String
          + User()
          + User()
          + encrypt()
          + getAuthID()
          + getDayStartTime()
          + getEmail()
          + getLastConnection()
          + getLastLogin()
          + getName()
          + getSignIn()
          + getStatus()
          + getUsername()
      }
    }
  }
  

  namespace com.ferllop.evermind {
    namespace models {
      enum UserStatus {
        LOGGED_IN
        LOGGED_OUT
        VERIFICATION_EMAIL
      }
    }
  }
  

  com.ferllop.evermind.models.Card -up-|> com.ferllop.evermind.models.Model
  com.ferllop.evermind.models.Card o-- com.ferllop.evermind.models.Labelling : labelling
  com.ferllop.evermind.models.Search +-down- com.ferllop.evermind.models.Search.Token
  com.ferllop.evermind.models.SubscribedCard o-- com.ferllop.evermind.models.Card : card
  com.ferllop.evermind.models.SubscribedCard o-- com.ferllop.evermind.models.Subscription : subscription
  com.ferllop.evermind.models.Subscription -up-|> com.ferllop.evermind.models.Model
  com.ferllop.evermind.models.Subscription o-- com.ferllop.evermind.models.Level : level
  com.ferllop.evermind.models.User -up-|> com.ferllop.evermind.models.Model
  com.ferllop.evermind.models.User o-- com.ferllop.evermind.models.UserStatus : status


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
